# grep-excel

./: .gitignore  AGENTS.md  CONTRIBUTION.md  Cargo.toml  README.md  test_data2.xlsx  test_data3.xlsx  test_data4.xlsx  test_data5.xlsx  test_data6.xlsx  test_date.xlsx
.github/workflows/: release.yml
.sisyphus/plans/: 2026-04-17-optimize-eav-to-wide-table.md
Desktop/: .gitignore  FIXES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  TEMPLATE_SUMMARY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Desktop/frontend/: App.tsx
Desktop/frontend/api/: commands.ts  tauri.ts
Desktop/frontend/components/: FileImporter.tsx  FileList.tsx  ResultsTable.tsx  SearchBar.tsx  SqlEditor.tsx
Desktop/frontend/i18n/: index.ts
Desktop/frontend/i18n/locales/: en.json  zh.json
Desktop/frontend/types/: search.ts
Desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
Desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: event.rs  interactive.rs  lib.rs  main.rs  mcp.rs
crates/cli/src/app/: handlers.rs  mod.rs  render.rs  theme.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: archive.rs  docx_table.rs  excel.rs  format.rs  html_table.rs  i18n.rs  lib.rs  parquet_table.rs  pdf_table.rs  pptx_table.rs  source.rs  text_table.rs  types.rs  xml_table.rs
crates/core/src/engine/: duckdb.rs  memory.rs  mod.rs  sqlite.rs
crates/core/tests/: dbf_test.rs  docx_test.rs  html_wdr_test.rs  merged_cells.rs  parquet.rs  pdf.rs  pptx_test.rs  regress.rs  temp_tables.rs  text_table_test.rs  tsv_test.rs  xml_test.rs
docs/: BEST-PRATICE.md  CONTRIBUTING.md  DeveloperGuide.md  UserGuide.md
docs/plans/: 2026-04-22-sql-query-support.md  2026-04-24-mcp-enhancements.md  2026-05-02-cli-exec-option.md  2026-06-16-tauri-desktop-integration.md  2026-06-24-issue-16-mcp-improvements.md  2026-07-14-kdocs-share-url-import-design.md  2026-07-14-kdocs-share-url-import-impl.md  2026-07-16-large-file-lazy-loading.md  2026-07-18-csv-duckdb-loading-optimization.md  2026-07-18-format-registry-refactor.md  2026-07-19-pdf-support.md  2026-07-19-session-temp-tables.md
src/: app.rs  database.rs  event.rs  excel.rs  i18n.rs  lib.rs  main.rs  mcp.rs  types.rs
src/app/: handlers.rs  mod.rs  render.rs  ui.rs
src/engine/: duckdb.rs  memory.rs  mod.rs  sqlite.rs
tests/: integration_test.rs
tests/benchmark/: grep-excel性能测评脚本包.md  grep-excel竞品对比.md  reproduce.sh
tests/benchmark/results/: macos-arm64-2026-07-19.txt  macos-arm64-topk-2026-07-19.txt
tests/benchmark/scripts/: bench.py  csvq_agg.sh  csvq_search.sh  duck.py  gen_data.py  gen_topk_data.py  jobsA.json  jobsB.json  jobsC.json  jobsD.json  jobsE.json  topk_duck.py  topk_heap.py
tests/fixtures/parquet/: README.md  sample.parquet
tests/fixtures/pdf/: README.md
tests/regress/: README.md  awr.html  awr.md  awr.txt  sample_tables.md
