[package]
name = "grep_excel"
version = "0.1.0"
edition = "2021"
description = "TUI tool for searching Excel/CSV files with full-text and wildcard search"
license = "MIT"
readme = "README.md"
repository = "https://github.com/c2j/grep-excel"
keywords = ["excel", "search", "tui", "duckdb"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tui-input = "0.11"
calamine = { version = "0.26", features = ["chrono"] }
zip = "2"
duckdb = { version = "1.1", features = ["bundled"], optional = true }
rusqlite = { version = "0.32", features = ["bundled", "functions"], optional = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
unicode-width = "0.2"
chrono = "0.4"
csv = "1"
regex = "1"
parking_lot = "0.12"
rfd = { version = "0.15", optional = true }
rmcp = { version = "1.5", features = ["server", "transport-io"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
schemars = { version = "1", optional = true }

[features]
default = ["engine-memory", "file-dialog"]
engine-duckdb = ["dep:duckdb"]
engine-sqlite = ["dep:rusqlite"]
engine-memory = []
file-dialog = ["dep:rfd"]
mcp-server = ["dep:rmcp", "dep:tokio", "dep:serde", "dep:serde_json", "dep:schemars"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
