[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.10"
edition = "2021"
license = "MIT"
repository = "https://github.com/c2j/grep-excel"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
regex = "1"
chrono = "0.4"
parking_lot = "0.12"
calamine = { version = "0.26", features = ["chrono"] }
csv = "1"
unicode-width = "0.2"
zip = "2"
roxmltree = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
