[workspace]
members = ["crates/*", "Desktop/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.6.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/c2j/grep-excel"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
regex = "1"
chrono = "0.4"
parking_lot = "0.12"
calamine = { version = "0.26", features = ["dates"] }
csv = "1"
unicode-width = "0.2"
zip = "2"
roxmltree = "0.20"
encoding_rs = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
