[package]
name = "grep-excel-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core engine for grep-excel: Excel/CSV search and manipulation"

[lib]
name = "grep_excel_core"
path = "src/lib.rs"

[dependencies]
calamine.workspace = true
zip.workspace = true
roxmltree.workspace = true
csv.workspace = true
regex.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
unicode-width = "0.2"
encoding_rs.workspace = true
scraper = "0.21"
dbase = "0.8"

# Optional: cloud share URL download
reqwest = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }

# Optional: archive support (zip, tar, tar.gz, tar.bz2, tar.xz, tar.zst)
tar = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
bzip2 = { version = "0.4", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }

# Optional engines
duckdb = { version = "1.10501", optional = true }
rusqlite = { version = "0.32", features = ["bundled", "functions"], optional = true }

# Optional xlsx writer
rust_xlsxwriter = { version = "0.82", optional = true }
schemars = { version = "1", optional = true }

[features]
default = ["engine-memory"]
engine-memory = []
engine-duckdb = ["dep:duckdb"]
engine-sqlite = ["dep:rusqlite"]
duckdb-bundled = ["engine-duckdb", "duckdb/bundled", "duckdb/json"]
rust_xlsxwriter = ["dep:rust_xlsxwriter"]
mcp-server = ["dep:schemars"]
share-url = ["dep:reqwest", "dep:tempfile"]
archive-support = ["dep:tar", "dep:flate2", "dep:bzip2", "dep:xz2", "dep:zstd", "dep:tempfile"]
